change to upper

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section id="About">
         <h3>About.</h3>
         <article class="about">
-          <img class="one" src="img/gallery/myselfcompressed.jpg" alt="Mikaela">
+          <img class="one" src="img/Gallery/myselfcompressed.jpg" alt="Mikaela">
           <div class="two">
             <p style="margin-top: 0px;">I have always enjoyed making Art, whether it's drawing on a paper, digitally on a computer, or doodling, my mind has always been in the creative field. I have a design background and taught myself how to use
               Adobe design programs such
@@ -113,7 +113,7 @@
       <article class="gallery">
 
         <div class="overlay-wrapper-sliding typo">
-          <img src="img/gallery/mini1.jpg" alt="">
+          <img src="img/Gallery/mini1.jpg" alt="">
           <div class="overlay slider">
             <span>
               <p class="title">Typography Project</p>
@@ -126,7 +126,7 @@
 
 
         <div class="overlay-wrapper-sliding menuproject">
-          <img src="img/gallery/mini3.jpg" alt="">
+          <img src="img/Gallery/mini3.jpg" alt="">
           <div class="overlay slider">
             <span>
               <p class="title">Menu Project</p>
@@ -137,7 +137,7 @@
         </div>
 
         <div class="overlay-wrapper-sliding photos">
-          <img src="img/gallery/mini2.jpg" alt="">
+          <img src="img/Gallery/mini2.jpg" alt="">
           <div class="overlay slider photography">
             <span>
               <p class="title">Photography</p>
@@ -148,7 +148,7 @@
         </div>
 
         <div class="overlay-wrapper-sliding CSSHTML" style="height: 300px; width: 400px;">
-          <img src="img/gallery/Monument Lab2.jpg" alt="" style="object-fit: contain;">
+          <img src="img/Gallery/Monument Lab2.jpg" alt="" style="object-fit: contain;">
           <div class="overlay slider">
             <span>
               <p class="title">HTML, CSS, & Jquery</p>
@@ -211,8 +211,8 @@
 
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide"><img src="img/gallery/big3.jpg"></div>
-            <div class="swiper-slide"><img src="img/gallery/big8.jpg"></div>
+            <div class="swiper-slide"><img src="img/Gallery/big3.jpg"></div>
+            <div class="swiper-slide"><img src="img/Gallery/big8.jpg"></div>
           </div>
 
           <div class="swiper-button-prev"></div>
@@ -228,8 +228,8 @@
 
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide"><img src="img/gallery/big2.jpg"></div>
-            <div class="swiper-slide"><img src="img/gallery/big1.jpg"></div>
+            <div class="swiper-slide"><img src="img/Gallery/big2.jpg"></div>
+            <div class="swiper-slide"><img src="img/Gallery/big1.jpg"></div>
           </div>
 
           <div class="swiper-button-prev"></div>
@@ -245,12 +245,12 @@
 
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide"><img src="img/gallery/css html/monument-section3.jpg" style="object-fit: scale-down;"></div>
-            <div class="swiper-slide"><img src="img/gallery/css html/monument-section1.jpg" style="object-fit: scale-down;"></div>
-            <div class="swiper-slide"><img src="img/gallery/css html/monument-section2.jpg" style="object-fit: scale-down;"></div>
-            <div class="swiper-slide"><img src="img/gallery/css html/pacific-section1.jpg" style="object-fit: scale-down;"></div>
-            <div class="swiper-slide"><img src="img/gallery/css html/pacific-section3.jpg" style="object-fit: scale-down;"></div>
-            <div class="swiper-slide"><img src="img/gallery/css html/pacific-section2.jpg" style="object-fit: scale-down;"></div>
+            <div class="swiper-slide"><img src="img/Gallery/css html/monument-section3.jpg" style="object-fit: scale-down;"></div>
+            <div class="swiper-slide"><img src="img/Gallery/css html/monument-section1.jpg" style="object-fit: scale-down;"></div>
+            <div class="swiper-slide"><img src="img/Gallery/css html/monument-section2.jpg" style="object-fit: scale-down;"></div>
+            <div class="swiper-slide"><img src="img/Gallery/css html/pacific-section1.jpg" style="object-fit: scale-down;"></div>
+            <div class="swiper-slide"><img src="img/Gallery/css html/pacific-section3.jpg" style="object-fit: scale-down;"></div>
+            <div class="swiper-slide"><img src="img/Gallery/css html/pacific-section2.jpg" style="object-fit: scale-down;"></div>
           </div>
 
           <div class="swiper-button-prev"></div>
@@ -264,10 +264,10 @@
 
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide"><img src="img/gallery/big4.jpg" style="object-fit: contain;"></div>
-            <div class="swiper-slide"><img src="img/gallery/big6.jpg" style="object-fit: contain;"></div>
-            <div class="swiper-slide"><img src="img/gallery/big5.jpg" style="object-fit: contain;"></div>
-            <div class="swiper-slide"><img src="img/gallery/big7.jpg" style="object-fit: contain;"></div>
+            <div class="swiper-slide"><img src="img/Gallery/big4.jpg" style="object-fit: contain;"></div>
+            <div class="swiper-slide"><img src="img/Gallery/big6.jpg" style="object-fit: contain;"></div>
+            <div class="swiper-slide"><img src="img/Gallery/big5.jpg" style="object-fit: contain;"></div>
+            <div class="swiper-slide"><img src="img/Gallery/big7.jpg" style="object-fit: contain;"></div>
 
           </div>
 
