--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@
         </nav>
 
         <div class="side-nav">
+          <i class="fa fa-times close" aria-hidden="true"></i>
           <a href="#About" class="hvr-underline-from-center">About</a>
           <a href="#Portfolio" class="hvr-underline-from-center">Portfolio</a>
           <a href="#Contact" class="hvr-underline-from-center">Contact</a>
+          <div class="side-social">
+            <a href="https://www.facebook.com/mikmikds" class="hvr-underline-from-center"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+            <a href="" class="hvr-underline-from-center"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/dinomik/" class="hvr-underline-from-center"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          </div>
         </div>
 
         <section>
           <h1> Mikaela Da Silva</h1>
           <h4>MDS</h4>
         </section>
-        <section class="social hide-mobile" style="margin-bottom: 11px;">
+        <section class="social" style="margin-bottom: 11px;">
           <a href="https://www.facebook.com/mikmikds" class="hvr-underline-from-center"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
           <a href="" class="hvr-underline-from-center"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
           <a href="https://www.instagram.com/dinomik/" class="hvr-underline-from-center"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -207,7 +213,9 @@
 
       <div class="modal-popup typography">
         <div class="swiper-container">
-          <span class="close">x</span>
+          <span class="close">
+            <i class="fa fa-times" aria-hidden="true"></i>
+          </span>
 
           <div class="swiper-wrapper">
             <!-- Slides -->
