--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikaela Da Silva</title>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/M-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
     <link rel="stylesheet" href="animate.min.css">
@@ -168,6 +168,9 @@
 
       <h3 id="Contact"> Contact Me!</h3>
       <div class="contact">
+        <div>
+          <p> I would love to work with you! Shoot me an email here or you can personally email me at dasilva.mikaela@outlook.com</p>
+        </div>
         <form action="action_page.php">
 
           <label for="fname">First Name</label>
@@ -231,7 +234,9 @@
 
       <div class="modal-popup MenuProj">
         <div class="swiper-container">
-          <span class="close">x</span>
+          <span class="close">
+            <i class="fa fa-times" aria-hidden="true"></i>
+          </span>
 
           <div class="swiper-wrapper">
             <!-- Slides -->
@@ -248,7 +253,9 @@
 
       <div class="modal-popup CSS">
         <div class="swiper-container">
-          <span class="close">x</span>
+          <span class="close">
+            <i class="fa fa-times" aria-hidden="true"></i>
+          </span>
 
           <div class="swiper-wrapper">
             <!-- Slides -->
@@ -267,7 +274,9 @@
 
       <div class="modal-popup Photography">
         <div class="swiper-container">
-          <span class="close">x</span>
+          <span class="close">
+            <i class="fa fa-times" aria-hidden="true"></i>
+          </span>
 
           <div class="swiper-wrapper">
             <!-- Slides -->
