--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
   <body>
     <header style="position: relative;">
       <div class="nav-wrapper color">
-        <div class="hamburger">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
+        <div class="hamburger" style="margin-bottom: 11px;">
+          <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
         <nav class="main-nav">
           <a href="#About" class="hvr-underline-from-center">About</a>
@@ -227,6 +225,15 @@
 
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
+        </div>
+
+        <div class="modal-text typography">
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <p> Project that was made in class </p>
+            </div>
+          </div>
         </div>
       </div>
 
