--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="#Portfolio" class="hvr-underline-from-center">Portfolio</a>
           <a href="#Contact" class="hvr-underline-from-center">Contact</a>
           <div class="side-social">
-            <a href="https://www.facebook.com/mikmikds" class="hvr-underline-from-center"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/mikmikds" class="hvr-underline-from-center"><i class="fa-facebook-square" aria-hidden="true"></i></a>
             <a href="" class="hvr-underline-from-center"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
             <a href="https://www.instagram.com/dinomik/" class="hvr-underline-from-center"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </div>
