--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
           <div class="overlay slider">
             <span>
               <p class="title">Typography Project</p>
-              <p class="content"> This project was done in a Typopgrahy class in college. It's a poem in form of Typography, that is put into a small little book. Click Learn more to see other projects!</p>
               <button id="Typography">Learn More</button>
             </span>
 
@@ -133,7 +132,6 @@
           <div class="overlay slider">
             <span>
               <p class="title">Menu Project</p>
-              <p class="content"> A menu created for Poké resturant 'Ninja Poki Yaki' in Apple Valley. Communicated closely with the owner Peter to create this Menu for it's grand opening. Click learn more to view the full menu!</p>
               <button id="MenuProj"> Learn More </button>
             </span>
           </div>
@@ -144,7 +142,6 @@
           <div class="overlay slider photography">
             <span>
               <p class="title">Photography</p>
-              <p class="content"> I love to take pictures and bring my camera around. It creates memories and unforgettable moments. Cick learn more to see some images!</p>
               <button id="Photography"> Learn More </button>
             </span>
           </div>
@@ -155,7 +152,6 @@
           <div class="overlay slider">
             <span>
               <p class="title">HTML, CSS, & Jquery</p>
-              <p class="content"> A few homework projects created during General Assembly bootcamp. Click learn more to view each web page!</p>
               <button id="HTML"> Learn More </button>
             </span>
           </div>
@@ -227,11 +223,11 @@
           <div class="swiper-button-next"></div>
         </div>
 
-        <div class="modal-text typography">
+        <div class="modal-text">
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <p> Project that was made in class </p>
+              <p> This project was done in a Typopgrahy class in college. It's a poem in form of Typography, that is put into a small little book. </p>
             </div>
           </div>
         </div>
@@ -253,6 +249,15 @@
 
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
+        </div>
+
+        <div class="modal-text">
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <p> I created a Menu for a friend's grand opening to his Poke resturant called Ninja Poki Yaki.</p>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -277,6 +282,15 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
         </div>
+
+        <div class="modal-text">
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <p> A few homework projects created during General Assembly bootcamp. </p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="modal-popup Photography">
@@ -296,6 +310,15 @@
 
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
+        </div>
+        <div class="modal-text">
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <p>I love to take pictures and bring my camera around. It creates memories and unforgettable moments. Cick learn more to see some images!
+              </p>
+            </div>
+          </div>
         </div>
       </div>
 
