--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <div class="swiper-button-next"></div>
         </div>
 
-        <div class="modal-text">
+        <div class="modal-text typography">
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <!-- Slides -->
@@ -251,7 +251,7 @@
           <div class="swiper-button-next"></div>
         </div>
 
-        <div class="modal-text">
+        <div class="modal-text MenuProj">
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <!-- Slides -->
@@ -283,7 +283,7 @@
           <div class="swiper-button-next"></div>
         </div>
 
-        <div class="modal-text">
+        <div class="modal-text CSS">
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <!-- Slides -->
@@ -311,7 +311,7 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
         </div>
-        <div class="modal-text">
+        <div class="modal-text Photography">
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <!-- Slides -->
