--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text|Oswald&display=swap" rel="stylesheet">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
     <title>Mikaela Da Silva</title>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="shortcut icon" href="img/M-icon.png" type="image/x-icon">
@@ -227,7 +227,7 @@
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <p> This project was done in a Typopgrahy class in college. It's a poem in form of Typography, that is put into a small little book. </p>
+              <p> This project was done in a Typopgrahy class in college. It's a poem in form of Typography, that is put into a small little book. It was very challenging to use different fonts to explain the words or sentances correctly. </p>
             </div>
           </div>
         </div>
