--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text|Oswald&display=swap" rel="stylesheet">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikaela Da Silva</title>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="shortcut icon" href="img/M-icon.png" type="image/x-icon">
