--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="shortcut icon" href="img/M-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
     <link rel="stylesheet" href="animate.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/second.css">
@@ -271,9 +271,9 @@
 
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide"><img src="img/Gallery/css html/monument-section3.jpg" style="object-fit: scale-down;"></div>
-            <div class="swiper-slide"><img src="img/Gallery/css html/monument-section1.jpg" style="object-fit: scale-down;"></div>
-            <div class="swiper-slide"><img src="img/Gallery/css html/monument-section2.jpg" style="object-fit: scale-down;"></div>
+            <div class="swiper-slide"><a href="https://mikaeladasilva.com/monument_blog/"><img src="img/Gallery/css html/monument-section3.jpg" style="object-fit: scale-down;"></a></div>
+            <div class="swiper-slide"><a href="https://mikaeladasilva.com/monument_blog/"><img src="img/Gallery/css html/monument-section1.jpg" style="object-fit: scale-down;"></a></div>
+            <div class="swiper-slide"><a href="https://mikaeladasilva.com/monument_blog/"><img src="img/Gallery/css html/monument-section2.jpg" style="object-fit: scale-down;"></a></div>
             <div class="swiper-slide"><img src="img/Gallery/css html/pacific-section1.jpg" style="object-fit: scale-down;"></div>
             <div class="swiper-slide"><img src="img/Gallery/css html/pacific-section3.jpg" style="object-fit: scale-down;"></div>
             <div class="swiper-slide"><img src="img/Gallery/css html/pacific-section2.jpg" style="object-fit: scale-down;"></div>
@@ -287,7 +287,8 @@
           <div class="swiper-container">
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <p> A few homework projects created during General Assembly bootcamp. </p>
+              <p> A few homework projects created during General Assembly bootcamp.
+              </p>
             </div>
           </div>
         </div>
